--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
 
         <div class="hero-ctas">
           <a class="btn primary" href="pricing.html">Start Trial</a>
-          <a class="btn outline" href="about.html">Our Story</a>
         </div>
 
         <div class="hero-stats">
@@ -126,7 +125,7 @@
       </div>
 
       <div class="preview-media">
-        <img src="assets/preview.jpg" alt="gym preview">
+        <img src="gym.jpg" alt="gym preview">
       </div>
     </section>
   </main>
@@ -162,3 +161,4 @@
   </script>
 </body>
 </html>
+
