--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <h3>Join POWERHUB</h3>
         <p class="muted">Transformations start when you commit. Memberships built for real life.</p>
         <div class="preview-ctas">
-          <a class="btn primary" href="pricing.html">See Plans</a>
+          <a class="btn primary" href="seeplan.html">See Plans</a>
           <a class="btn outline" href="contact.html">Visit Us</a>
         </div>
       </div>
@@ -161,5 +161,6 @@
   </script>
 </body>
 </html>
+
 
 
