--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p class="hero-sub">Elite coaching. Science-backed programs. Community that pushes you beyond limits.</p>
 
         <div class="hero-ctas">
-          <a class="btn primary" href="pricing.html">Start Trial</a>
+          <a class="btn primary">Start Trial</a>
         </div>
 
         <div class="hero-stats">
@@ -160,6 +160,7 @@
   </script>
 </body>
 </html>
+
 
 
 
