--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         </div>
 
         <div class="trainer-preview">
-          <img src="subhan.jpeg" alt="trainer preview">
+          <img src="subhan.jp" alt="trainer preview">
           <div class="tp-info">
-            <div class="tp-name">Subhan Khan</div>
+            <div class="tp-name">SAURABH</div>
             <div class="tp-role">Head Coach</div>
           </div>
         </div>
@@ -160,6 +160,7 @@
   </script>
 </body>
 </html>
+
 
 
 
