--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
             </div>
-             <a href="file:///C:/Users/NIRMALA%20HALWAI/OneDrive/Desktop/2page.html"</a><h2>login</h2>
+             <a href="home.html"</a><h2>login</h2>
         </form>
         <a href="file:///C:/Users/NIRMALA%20HALWAI/OneDrive/Desktop/register.html"</a>Don't have an account?sign up</div>
 
 </body>
+
 </html>
