--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
       <nav class="links" aria-label="Main navigation">
         <a href="#" class="active">Home</a>
         <a href="about.html">About Us</a>
-        <a href="trainers.html">Trainers</a>
+        <a href="plan.html">Trainers</a>
         <a href="contact.html">Contact Us</a>
       </nav>
       <button class="hamburger" aria-label="Open menu" aria-expanded="false">
@@ -195,5 +195,6 @@
   </script>
 </body>
 </html>
+
 
 
