--- a/plan.html
+++ b/plan.html
@@ -101,7 +101,7 @@
 </head>
 <body>
 
-  <h1><span class="red">POWERHUB</span> <span class="white">GYM</span></h1>
+  <h1><span class="red">POWERHUB GYM TRAINERS</span></h1>
   <p class="intro">Meet our expert trainers who redefine fitness through discipline, passion, and strength.  
   Their guidance helps you unleash the power within and achieve real transformation.</p>
 
