--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
         <a href="#" class="active">Home</a>
         <a href="about.html">About Us</a>
         <a href="plan.html">Trainers</a>
-        <a href="contact.html">Contact Us</a>
+        <a href="contactus1.html">Contact Us</a>
       </nav>
       <button class="hamburger" aria-label="Open menu" aria-expanded="false">
         <span></span><span></span><span></span>
@@ -195,6 +195,7 @@
   </script>
 </body>
 </html>
+
 
 
 
