--- a/contactus1.html
+++ b/contactus1.html
@@ -165,10 +165,10 @@
     <div class="nav-inner">
       <a href="#" class="brand">POWERHUB</a>
       <div class="links">
-        <a href="index.html">Home</a>
-        <a href="trainers.html">Trainers</a>
-        <a href="membership.html">Membership</a>
-        <a href="contact.html" class="active">Contact</a>
+        <a href="home.html">Home</a>
+        <a href=".html">About us</a>
+        <a href="plan.html">Trainers</a>
+        <a href="contactus1.html" class="active">Contact Us</a>
       </div>
     </div>
   </nav>
@@ -199,4 +199,5 @@
   </section>
 
 </body>
+
 </html>
