--- a/plan.html
+++ b/plan.html
@@ -190,7 +190,7 @@
         <a href="home.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="trainers.html" class="active">Trainers</a>
-        <a href="contact.html">Contact Us</a>
+        <a href="contactus1.html">Contact Us</a>
       </div>
     </div>
   </nav>
