--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <div class="input-group">
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
+                <input type="submit" value="Login">
             </div>
              <a href="home.html"</a><h2>login</h2>
         </form>
@@ -23,3 +24,4 @@
 </body>
 
 </html>
+
