--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="loginstyle.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gym Login</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h3>Welcome To PowerZone Gym</h3>
-    <div class="login-container">
-        <h2>Gym Login</h2>
-        <form action="/login" method="post">
-            <div class="input-group">
-                <label for="username">Username</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div class="input-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
-                <input type="submit" value="Login">
-            </div>
-             <a href="home.html"</a><h2>login</h2>
-        </form>
-        <a href="file:///C:/Users/NIRMALA%20HALWAI/OneDrive/Desktop/register.html"</a>Don't have an account?sign up</div>
+  <div class="container">
+    <div class="gym-man"></div>
 
+    <div class="login-box">
+      <h1>💪 PowerHub Login</h1>
+      <form>
+        <div class="input-box">
+          <input type="text" required>
+          <label>Username</label>
+        </div>
+        <div class="input-box">
+          <input type="password" required>
+          <label>Password</label>
+        </div>
+        <button type="submit" class="btn">Login</button>
+        <p class="register-link">Don’t have an account? <a href="regist.html">Register Now</a></p>
+      </form>
+    </div>
+  </div>
 </body>
-
 </html>
-
