--- a/regist.html
+++ b/regist.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gym Registration</title>
-  <link rel="stylesheet" href="regist.css">
+  <link rel="stylesheet" href="register.css">
 </head>
 <body>
   <div class="container">
@@ -55,3 +55,4 @@
   </div>
 </body>
 </html>
+
