--- a/regist.html
+++ b/regist.html
@@ -48,11 +48,12 @@
           <label>Confirm Password</label>
         </div>
 
-        <button type="submit" class="btn"><a href="rohini.html">Register</a></button>
-        <p class="login-link">Already have an account? <a href="rohini.html">Login Now</a></p>
+        <button type="submit" class="btn"><a href="index.html">Register</a></button>
+        <p class="login-link">Already have an account? <a href="index.html">Login Now</a></p>
       </form>
     </div>
   </div>
 </body>
 </html>
+
 
