--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
           <input type="password" required>
           <label>Password</label>
         </div>
-        <button type="submit" class="btn" href="home.html">Login</button>
+       <a href="home.html"> <button type="submit" class="btn">Login</button></a>
         <p class="register-link">Don’t have an account? <a href="regist.html">Register Now</a></p>
       </form>
     </div>
   </div>
 </body>
 </html>
+
 
 
