--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
           <input type="password" required>
           <label>Password</label>
         </div>
-       <a href="home.html"> <button type="submit" class="btn">Login</button></a>
+       <a href="home.html" class="btn">Login</a>
         <p class="register-link">Don’t have an account? <a href="regist.html">Register Now</a></p>
       </form>
     </div>
   </div>
 </body>
 </html>
+
 
 
 
