--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
           <input type="password" required>
           <label>Password</label>
         </div>
+        <center>
        <a href="home.html" class="btn">Login</a>
+          </center>
         <p class="register-link">Don’t have an account? <a href="regist.html">Register Now</a></p>
       </form>
     </div>
   </div>
 </body>
 </html>
+
 
 
 
