--- a/seeplan.html
+++ b/seeplan.html
@@ -137,7 +137,8 @@
       <div class="price">₹999</div>
       <p>Access to all gym equipment and locker facilities.  
       Ideal for short-term goals or first-time members.</p>
-      <button>Join Now</button>
+      <button>Book Now</button>
+      <p class="booking-success hidden">✅Congrulation your plan selected</p>
     </div>
 
     <div class="plan">
@@ -145,7 +146,8 @@
       <div class="price">₹2499</div>
       <p>Full access plus 1 personal trainer session every week.  
       Perfect for consistency and progress tracking.</p>
-      <button>Join Now</button>
+      <button>Book Now</button>
+      <p class="booking-success hidden">✅Congrulation your plan selected</p>
     </div>
 
     <div class="plan">
@@ -153,7 +155,8 @@
       <div class="price">₹4499</div>
       <p>Includes trainer support, diet guidance, and flexibility sessions.  
       Great for transformation programs.</p>
-      <button>Join Now</button>
+      <button>Book Now</button>
+      <p class="booking-success hidden">✅Congrulation your plan selected</p>
     </div>
 
     <div class="plan">
@@ -161,7 +164,8 @@
       <div class="price">₹7999</div>
       <p>Unlimited access, personal coaching, and nutrition planning.  
       Best value for serious fitness lovers.</p>
-      <button>Join Now</button>
+      <button>Book Now</button>
+      <p class="booking-success hidden">✅Congrulation your plan selected</p>
     </div>
   </div>
 
@@ -171,4 +175,5 @@
 
 </body>
 </html>
+
 
