--- a/seeplan.html
+++ b/seeplan.html
@@ -137,7 +137,7 @@
       <div class="price">₹999</div>
       <p>Access to all gym equipment and locker facilities.  
       Ideal for short-term goals or first-time members.</p>
-      <button>Book Now</button>
+       <button class="btn primary wide" type="submit">Get Booked</button>
       <p class="booking-success hidden">✅Congrulation your plan selected</p>
     </div>
 
@@ -146,7 +146,7 @@
       <div class="price">₹2499</div>
       <p>Full access plus 1 personal trainer session every week.  
       Perfect for consistency and progress tracking.</p>
-      <button>Book Now</button>
+       <button class="btn primary wide" type="submit">Get Booked</button>
       <p class="booking-success hidden">✅Congrulation your plan selected</p>
     </div>
 
@@ -155,7 +155,7 @@
       <div class="price">₹4499</div>
       <p>Includes trainer support, diet guidance, and flexibility sessions.  
       Great for transformation programs.</p>
-      <button>Book Now</button>
+       <button class="btn primary wide" type="submit">Get Booked</button>
       <p class="booking-success hidden">✅Congrulation your plan selected</p>
     </div>
 
@@ -164,7 +164,7 @@
       <div class="price">₹7999</div>
       <p>Unlimited access, personal coaching, and nutrition planning.  
       Best value for serious fitness lovers.</p>
-      <button>Book Now</button>
+       <button class="btn primary wide" type="submit">Get Booked</button>
       <p class="booking-success hidden">✅Congrulation your plan selected</p>
     </div>
   </div>
@@ -175,5 +175,6 @@
 
 </body>
 </html>
+
 
 
