--- a/seeplan.html
+++ b/seeplan.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Membership Plans | PowerHub Gym</title>
@@ -175,6 +176,7 @@
 
 </body>
 </html>
+
 
 
 
