--- a/regist.html
+++ b/regist.html
@@ -1,59 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gym Registration</title>
-  <link rel="stylesheet" href="register.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PowerHub Gym | Register</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background: radial-gradient(circle at top, #000000 0%, #0a0a0a 100%);
+      font-family: "Poppins", sans-serif;
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+
+    .register-card {
+      background: rgba(0, 0, 0, 0.9);
+      box-shadow: 0 0 25px rgba(255, 200, 0, 0.25);
+      border-radius: 20px;
+      width: 380px;
+      padding: 40px 35px;
+      text-align: center;
+      animation: fadeIn 1.2s ease-out;
+    }
+
+    .register-card h1 {
+      color: #ffb700;
+      font-size: 28px;
+      text-shadow: 0 0 12px #ffb700, 0 0 25px #ff9100;
+      margin-bottom: 25px;
+    }
+
+    .register-card h1 span {
+      font-size: 1.4em;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+
+    label {
+      text-align: left;
+      font-size: 14px;
+      font-weight: 500;
+      color: #f1f1f1;
+    }
+
+    input,
+    select {
+      width: 100%;
+      background: transparent;
+      border: none;
+      border-bottom: 2px solid #555;
+      color: #fff;
+      font-size: 15px;
+      padding: 10px 5px;
+      outline: none;
+      transition: all 0.3s ease;
+      appearance: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      border-radius: 0;
+    }
+
+    input:focus,
+    select:focus {
+      border-bottom-color: #ffb700;
+      box-shadow: 0 2px 12px rgba(255, 200, 0, 0.35);
+    }
+
+    input::placeholder {
+      color: #bbb;
+    }
+
+    /* Fix dropdown text visibility */
+    select option {
+      background: #111;
+      color: #fff;
+    }
+
+    select::-ms-expand {
+      display: none;
+    }
+
+    /* Add custom arrow for select */
+    select {
+      background-image: linear-gradient(45deg, transparent 50%, #ffb700 50%),
+        linear-gradient(135deg, #ffb700 50%, transparent 50%);
+      background-position: calc(100% - 20px) calc(1.1em), calc(100% - 15px) calc(1.1em);
+      background-size: 5px 5px, 5px 5px;
+      background-repeat: no-repeat;
+    }
+
+    .dob-container {
+      display: flex;
+      gap: 8px;
+    }
+
+    button {
+      margin-top: 10px;
+      background: linear-gradient(90deg, #ff1e00, #ffb700);
+      color: #fff;
+      font-weight: 600;
+      font-size: 16px;
+      border: none;
+      padding: 12px 0;
+      border-radius: 30px;
+      cursor: pointer;
+      box-shadow: 0 0 15px rgba(255, 140, 0, 0.6);
+      transition: all 0.4s ease;
+    }
+
+    button:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 25px rgba(255, 200, 0, 0.8);
+    }
+
+    .login-link {
+      margin-top: 20px;
+      font-size: 14px;
+      color: #ccc;
+    }
+
+    .login-link a {
+      color: #ffb700;
+      text-decoration: none;
+      font-weight: 600;
+      transition: 0.3s;
+    }
+
+    .login-link a:hover {
+      text-shadow: 0 0 8px #ffb700;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <div class="gym-man"></div>
+  <div class="register-card">
+    <h1><span>💪</span> PowerHub Register</h1>
+    <form>
+      <label>Full Name</label>
+      <input type="text" placeholder="Enter your name" required>
 
-    <div class="register-box">
-      <h1>🏋️‍♂️ Power Gym Register</h1>
-      <form>
-        <div class="input-box">
-          <input type="text" required>
-          <label>Full Name</label>
-        </div>
+     
 
-        <div class="input-box">
-          <input type="email" required>
-          <label>Email</label>
-        </div>
+      <label>Phone Number</label>
+      <input type="tel" placeholder="Enter your phone" required>
 
-        <div class="input-box">
-          <input type="text" required>
-          <label>Username</label>
-        </div>
+      <label>Gender</label>
+      <select required>
+        <option value="" disabled selected>Select Gender</option>
+        <option>Male</option>
+        <option>Female</option>
+        <option>Other (eg.SUBHAN)</option>
+      </select>
 
-        <div class="input-box">
-          <input type="tel" pattern="[0-9]{10}" required>
-          <label>Mobile Number</label>
-        </div>
+      <label>Date of Birth</label>
+      <div class="dob-container">
+        <input type="number" placeholder="DD" min="1" max="31" required>
+        <input type="number" placeholder="MM" min="1" max="12" required>
+        <input type="number" placeholder="YYYY" min="1900" max="2025" required>
+      </div>
 
-        <div class="input-box">
-          <input type="date" required>
-          <label class="dob-label">Date of Birth</label>
-        </div>
+      <label>Password</label>
+      <input type="password" placeholder="Create password" required>
 
-        <div class="input-box">
-          <input type="password" required>
-          <label>Password</label>
-        </div>
+	  <button onclick="showAlert()" type="submit">Register Now</button>
+    </form>
 
-        <div class="input-box">
-          <input type="password" required>
-          <label>Confirm Password</label>
-        </div>
-
-        <button type="submit" class="btn"><a href="index.html">Register</a></button>
-        <p class="login-link">Already have an account? <a href="index.html">Login Now</a></p>
-      </form>
+    <div class="login-link">
+      Already have an account? <a href="index.html">Login</a>
     </div>
   </div>
 </body>
 </html>
-
-
