--- a/regist.html
+++ b/regist.html
@@ -1,196 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PowerHub Gym | Register</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Register | PowerHub Gym</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800;900&display=swap');
+
+    :root {
+      --bg-top: #0e0013;
+      --bg-mid: #190014;
+      --bg-bot: #000010;
+      --accent-red: #ff1744;
+      --accent-red-2: #ff5f6d;
+      --accent-cyan: #00e5ff;
+      --muted: #bfc5cc;
+      --glass: rgba(255,255,255,0.03);
+      --glass-2: rgba(255,255,255,0.02);
+      --radius: 12px;
+    }
+
     body {
-      background: radial-gradient(circle at top, #000000 0%, #0a0a0a 100%);
-      font-family: "Poppins", sans-serif;
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(180deg, var(--bg-top) 0%, var(--bg-mid) 40%, var(--bg-bot) 100%);
+      background-attachment: fixed;
       color: #fff;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
       margin: 0;
+      overflow: hidden;
     }
 
-    .register-card {
-      background: rgba(0, 0, 0, 0.9);
-      box-shadow: 0 0 25px rgba(255, 200, 0, 0.25);
-      border-radius: 20px;
+    body::before {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background: radial-gradient(circle at 20% 15%, rgba(255,23,68,0.12), transparent 40%),
+                  radial-gradient(circle at 85% 85%, rgba(0,229,255,0.05), transparent 30%);
+      pointer-events: none;
+      z-index: -1;
+    }
+
+    .register-box {
+      background: linear-gradient(180deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02));
+      border: 1px solid rgba(255,255,255,0.05);
+      backdrop-filter: blur(12px) saturate(180%);
+      border-radius: var(--radius);
+      box-shadow: 0 18px 60px rgba(0,0,0,0.6);
+      padding: 40px;
       width: 380px;
-      padding: 40px 35px;
-      text-align: center;
-      animation: fadeIn 1.2s ease-out;
-    }
-
-    .register-card h1 {
-      color: #ffb700;
-      font-size: 28px;
-      text-shadow: 0 0 12px #ffb700, 0 0 25px #ff9100;
-      margin-bottom: 25px;
-    }
-
-    .register-card h1 span {
-      font-size: 1.4em;
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-
-    label {
+      max-width: 90%;
       text-align: left;
-      font-size: 14px;
-      font-weight: 500;
-      color: #f1f1f1;
+      animation: fadeUp 0.7s ease forwards;
     }
 
-    input,
-    select {
+    h1 {
+      color: var(--accent-red);
+      text-align: center;
+      margin-bottom: 24px;
+      font-weight: 800;
+      text-shadow: 0 0 18px rgba(255,23,68,0.3), 0 0 42px rgba(255,23,68,0.1);
+    }
+
+    .input-group {
+      margin-bottom: 18px;
+    }
+
+    .input-group label {
+      display: block;
+      font-size: 0.9rem;
+      color: var(--muted);
+      margin-bottom: 6px;
+    }
+
+    .input-group input,
+    .input-group select {
       width: 100%;
+      padding: 10px 12px;
+      border-radius: 8px;
+      border: 1px solid rgba(255,255,255,0.08);
       background: transparent;
-      border: none;
-      border-bottom: 2px solid #555;
       color: #fff;
-      font-size: 15px;
-      padding: 10px 5px;
       outline: none;
-      transition: all 0.3s ease;
-      appearance: none;
-      -webkit-appearance: none;
-      -moz-appearance: none;
-      border-radius: 0;
+      font-size: 1rem;
+      transition: all 0.3s;
     }
 
-    input:focus,
-    select:focus {
-      border-bottom-color: #ffb700;
-      box-shadow: 0 2px 12px rgba(255, 200, 0, 0.35);
+    .input-group input:focus,
+    .input-group select:focus {
+      border-color: var(--accent-red);
+      box-shadow: 0 0 8px rgba(255,23,68,0.4), 0 0 16px rgba(255,23,68,0.2);
     }
 
-    input::placeholder {
-      color: #bbb;
-    }
-
-    /* Dropdown options visible fix */
     select option {
-      background: #111;
+      background-color: #0a0010;
       color: #fff;
     }
 
-    /* Custom dropdown arrow */
-    select {
-      background-image: linear-gradient(45deg, transparent 50%, #ffb700 50%),
-        linear-gradient(135deg, #ffb700 50%, transparent 50%);
-      background-position: calc(100% - 20px) calc(1.1em), calc(100% - 15px) calc(1.1em);
-      background-size: 5px 5px, 5px 5px;
-      background-repeat: no-repeat;
-    }
-
-    .dob-container {
-      display: flex;
-      gap: 8px;
-    }
-
-    button {
-      margin-top: 10px;
-      background: linear-gradient(90deg, #ff1e00, #ffb700);
-      color: #fff;
-      font-weight: 600;
-      font-size: 16px;
+    .btn {
+      width: 100%;
+      padding: 12px 16px;
+      background: linear-gradient(90deg, var(--accent-red), var(--accent-red-2));
       border: none;
-      padding: 12px 0;
-      border-radius: 30px;
+      border-radius: 999px;
+      font-weight: 700;
+      color: #fff;
       cursor: pointer;
-      box-shadow: 0 0 15px rgba(255, 140, 0, 0.6);
-      transition: all 0.4s ease;
+      margin-top: 10px;
+      transition: all 0.3s ease;
+      box-shadow: 0 0 20px rgba(255,23,68,0.4);
     }
 
-    button:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 25px rgba(255, 200, 0, 0.8);
+    .btn:hover {
+      transform: translateY(-2px) scale(1.02);
+      box-shadow: 0 0 28px rgba(255,23,68,0.6), 0 0 48px rgba(255,23,68,0.4);
     }
 
     .login-link {
-      margin-top: 20px;
-      font-size: 14px;
-      color: #ccc;
+      text-align: center;
+      margin-top: 14px;
+      font-size: 0.9rem;
+      color: var(--muted);
     }
 
     .login-link a {
-      color: #ffb700;
+      color: var(--accent-cyan);
       text-decoration: none;
       font-weight: 600;
       transition: 0.3s;
     }
 
     .login-link a:hover {
-      text-shadow: 0 0 8px #ffb700;
+      color: var(--accent-red);
+      text-shadow: 0 0 10px rgba(255,23,68,0.5);
     }
 
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(30px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+    @keyframes fadeUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
-  <div class="register-card">
-    <h1><span>💪</span> PowerHub Register</h1>
-    <form onsubmit="return handleRegister(event)">
-      <label>Full Name</label>
-      <input type="text" placeholder="Enter your name" required>
 
-      <label>Phone Number</label>
-      <input type="tel" placeholder="Enter your phone" required>
-
-      <label>Gender</label>
-      <select required>
-        <option value="" disabled selected>Select Gender</option>
-        <option>Male</option>
-        <option>Female</option>
-        <option>Other (eg. SUBHAN)</option>
-      </select>
-
-      <label>Date of Birth</label>
-      <div class="dob-container">
-        <input type="number" placeholder="DD" min="1" max="31" required>
-        <input type="number" placeholder="MM" min="1" max="12" required>
-        <input type="number" placeholder="YYYY" min="1900" max="2025" required>
+  <div class="register-box">
+    <h1>Join PowerHub Gym</h1>
+    <form onsubmit="return goLogin();">
+      <div class="input-group">
+        <label>Full Name</label>
+        <input type="text" placeholder="Enter your name" required>
       </div>
 
-      <label>Password</label>
-      <input type="password" placeholder="Create password" required>
 
-      <button type="submit">Register Now</button>
+      <div class="input-group">
+        <label>Phone Number</label>
+        <input type="tel" placeholder="Enter your phone" required>
+      </div>
+
+      <div class="input-group">
+        <label>Gender</label>
+        <select required>
+          <option value="">Select Gender</option>
+          <option>Male</option>
+          <option>Female</option>
+          <option>Other (eg.SUBHAN)</option>
+        </select>
+      </div>
+
+      <div class="input-group">
+        <label>Membership Plan</label>
+        <select required>
+          <option value="">Select Plan</option>
+          <option>1 Month</option>
+          <option>3 Months</option>
+          <option>6 Months</option>
+          <option>1 Year</option>
+        </select>
+      </div>
+
+      <div class="input-group">
+        <label>Password</label>
+        <input type="password" placeholder="Create password" required>
+      </div>
+
+      <button type="submit" class="btn">Register</button>
+
+      <p class="login-link">Already have an account? <a href="login.html">Login</a></p>
     </form>
-
-    <div class="login-link">
-      Already have an account? <a href="index.html">Login</a>
-    </div>
   </div>
 
   <script>
-    function handleRegister(event) {
-      event.preventDefault(); // prevent page reload
-      alert("🎉 Registration successful! Welcome to PowerHub 💪");
-      // Redirect to dashboard or home page
-      window.location.href = "index.html"; 
+    function goLogin() {
+      alert("✅ Registration Successful! Redirecting to login...");
+      window.location.href = "login.html";
       return false;
     }
   </script>
+
 </body>
 </html>
-
