--- a/index.html
+++ b/index.html
@@ -3,35 +3,177 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gym Login</title>
-  <link rel="stylesheet" href="loginstyle.css">
-</head>
-<body>
-  <div class="container">
-    <div class="gym-man"></div>
+  <title>PowerHub Login</title>
 
-    <div class="login-box">
-      <h1>💪 PowerHub Login</h1>
-      <form>
-        <div class="input-box">
-          <input type="text" required>
-          <label>Username</label>
-        </div>
-        <div class="input-box">
-          <input type="password" required>
-          <label>Password</label>
-        </div>
-        <center>
-       <a href="home.html" class="btn">Login</a>
-          </center>
-        <p class="register-link">Don’t have an account? <a href="regist.html">Register Now</a></p>
-      </form>
-    </div>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800;900&display=swap');
+
+    :root {
+      --bg-top: #0e0013;
+      --bg-mid: #190014;
+      --bg-bot: #000010;
+      --accent-red: #ff1744;
+      --accent-red-2: #ff5f6d;
+      --accent-cyan: #00e5ff;
+      --muted: #bfc5cc;
+      --glass: rgba(255,255,255,0.03);
+      --radius: 12px;
+    }
+
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(180deg, var(--bg-top) 0%, var(--bg-mid) 40%, var(--bg-bot) 100%);
+      background-attachment: fixed;
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      overflow: hidden;
+    }
+
+    body::before {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background: radial-gradient(circle at 20% 15%, rgba(255,23,68,0.12), transparent 40%),
+                  radial-gradient(circle at 85% 85%, rgba(0,229,255,0.05), transparent 30%);
+      pointer-events: none;
+      z-index: -1;
+    }
+
+    .login-box {
+      background: linear-gradient(180deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02));
+      border: 1px solid rgba(255,255,255,0.05);
+      backdrop-filter: blur(12px) saturate(180%);
+      border-radius: var(--radius);
+      box-shadow: 0 18px 60px rgba(0,0,0,0.6);
+      padding: 40px;
+      width: 360px;
+      max-width: 90%;
+      animation: fadeUp 0.7s ease forwards;
+    }
+
+    h1 {
+      color: var(--accent-red);
+      text-align: center;
+      margin-bottom: 28px;
+      font-weight: 800;
+      text-shadow: 0 0 18px rgba(255,23,68,0.3), 0 0 42px rgba(255,23,68,0.1);
+    }
+
+    .input-box {
+      position: relative;
+      margin-bottom: 24px;
+    }
+
+    .input-box input {
+      width: 100%;
+      padding: 12px 10px;
+      background: transparent;
+      border: none;
+      border-bottom: 1px solid rgba(255,255,255,0.2);
+      color: #fff;
+      font-size: 1rem;
+      outline: none;
+      transition: all 0.3s ease;
+    }
+
+    .input-box label {
+      position: absolute;
+      top: 12px;
+      left: 10px;
+      color: var(--muted);
+      font-size: 0.9rem;
+      pointer-events: none;
+      transition: 0.3s;
+    }
+
+    .input-box input:focus ~ label,
+    .input-box input:valid ~ label {
+      top: -10px;
+      font-size: 0.8rem;
+      color: var(--accent-red);
+    }
+
+    .input-box input:focus {
+      border-bottom: 1px solid var(--accent-red);
+      box-shadow: 0 2px 10px rgba(255,23,68,0.4);
+    }
+
+    .btn {
+      width: 100%;
+      padding: 12px 16px;
+      background: linear-gradient(90deg, var(--accent-red), var(--accent-red-2));
+      border: none;
+      border-radius: 999px;
+      font-weight: 700;
+      color: #fff;
+      cursor: pointer;
+      margin-top: 10px;
+      transition: all 0.3s ease;
+      box-shadow: 0 0 20px rgba(255,23,68,0.4);
+    }
+
+    .btn:hover {
+      transform: translateY(-2px) scale(1.02);
+      box-shadow: 0 0 28px rgba(255,23,68,0.6), 0 0 48px rgba(255,23,68,0.4);
+    }
+
+    .register-link {
+      text-align: center;
+      margin-top: 18px;
+      font-size: 0.9rem;
+      color: var(--muted);
+    }
+
+    .register-link a {
+      color: var(--accent-cyan);
+      text-decoration: none;
+      font-weight: 600;
+      transition: 0.3s;
+    }
+
+    .register-link a:hover {
+      color: var(--accent-red);
+      text-shadow: 0 0 10px rgba(255,23,68,0.5);
+    }
+
+    @keyframes fadeUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
+</head>
+
+<body>
+  <div class="login-box">
+    <h1>💪 PowerHub Login</h1>
+    <form id="loginForm">
+      <div class="input-box">
+        <input type="text" required>
+        <label>Username</label>
+      </div>
+      <div class="input-box">
+        <input type="password" required>
+        <label>Password</label>
+      </div>
+      <center>
+        <button type="submit" class="btn">Login</button>
+      </center>
+      <p class="register-link">Don’t have an account? <a href="regist.html">Register Now</a></p>
+    </form>
   </div>
+
+  <script>
+    // Redirect after login
+    document.getElementById('loginForm').addEventListener('submit', function(event) {
+      event.preventDefault();
+      alert("✅ Login Successful! Redirecting to home...");
+      window.location.href = 'home.html';
+    });
+  </script>
 </body>
 </html>
-
-
-
-
 
