--- a/regist.html
+++ b/regist.html
@@ -187,17 +187,18 @@
 
       <button type="submit" class="btn">Register</button>
 
-      <p class="login-link">Already have an account? <a href="login.html">Login</a></p>
+      <p class="login-link">Already have an account? <a href="index.html">Login</a></p>
     </form>
   </div>
 
   <script>
     function goLogin() {
       alert("✅ Registration Successful! Redirecting to login...");
-      window.location.href = "login.html";
+      window.location.href = "index.html";
       return false;
     }
   </script>
 
 </body>
 </html>
+
