--- a/index.html
+++ b/index.html
@@ -167,12 +167,10 @@
   </div>
 
     <script>
-  const correctUsername = "yourUsername";   // yahan apna desired username dalein
-  const correctPassword = "yourPassword";   // yahan apna desired password dalein
-
+  const correctUsername = "POWERHUB";  
+  const correctPassword = "POWERHUB";  
   document.getElementById('loginForm').addEventListener('submit', function(e){
-    e.preventDefault(); // form submit hone se rokna
-
+    e.preventDefault();
     const enteredUser = this.querySelector('input[type="text"]').value.trim();
     const enteredPwd  = this.querySelector('input[type="password"]').value;
 
@@ -180,7 +178,7 @@
       // Login successful
       alert("Login successful!");
       // Redirect karna chahte hain toh:
-      window.location.href = "dashboard.html";  // apne dashboard page ka URL dalein
+      window.location.href = "home.html"; 
     } else {
       // Login failed
       alert("Invalid username or password!");
@@ -191,5 +189,6 @@
   </script>
 </body>
 </html>
+
 
 
