--- a/regist.html
+++ b/regist.html
@@ -165,7 +165,7 @@
           <option value="">Select Gender</option>
           <option>Male</option>
           <option>Female</option>
-          <option>Other (eg.SUBHAN)</option>
+          <option>Other</option>
         </select>
       </div>
 
@@ -191,5 +191,6 @@
 
 </body>
 </html>
+
 
 
