--- a/home.html
+++ b/home.html
@@ -96,9 +96,9 @@
         </div>
 
         <div class="trainer-preview">
-          <img src="subhan.jpg" alt="trainer preview" href="#">
+          <img src="gymhome.png" alt="trainer preview" href="#">
           <div class="tp-info">
-            <div class="tp-name">Saurabh</div>
+            <div class="tp-name">Subhan Khan</div>
             <div class="tp-role">Head Coach</div>
           </div>
         </div>
@@ -195,6 +195,7 @@
   </script>
 </body>
 </html>
+
 
 
 
