--- a/plan.html
+++ b/plan.html
@@ -203,8 +203,7 @@
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTnzBArH03zHFVquG0_ihhS05b-vXXXkdBD4A&s" alt="Trainer 1">
     <div class="trainer-info">
       <h2>Shubham Kochle</h2>
-      <p>A certified strength and conditioning coach focused on power, endurance, and perfect form.  
-      His sessions push your limits and sculpt your best version — the gate, bricks, or gym floor, nothing stops him.</p>
+      <pSubham kochale is one of our experienced and famous trainers. He believes that "Roz subha sabse pehle ek glass dhoodh" then oggy shoes then intense workout with "15 rupees wali eentt (bricks)".He loves to do exercise with eent and especially "Ghar ka gate".</p>
     </div>
   </div>
 
@@ -213,8 +212,9 @@
     <img src="https://images.hindustantimes.com/rf/image_size_630x354/HT/p2/2020/08/30/Pictures/_838b3fb0-ea84-11ea-b0d0-732c2aa3f4c8.jpg" alt="Trainer 2">
     <div class="trainer-info">
       <h2>Kokila Modi</h2>
-      <p>Known for her no-nonsense discipline, Kokila ensures no one slacks on form or diet.  
-      Her sessions combine tradition and strength — no excuses, just pure transformation.</p>
+      <p>Kokila modi is known for his attitude and arrogance.  
+      Kokila modi is so serious and passionate about her fitness,"Gopi bahu" and "Gopi bahu ki love life".  
+      Kokila modi is so strict towards to diets she don't want anyone to be fat specially "Ahem babu".</p>
     </div>
   </div>
 
@@ -222,9 +222,9 @@
   <div class="trainer-section">
     <img src="https://m.media-amazon.com/images/M/MV5BZTVmYWU5NWMtNTE5My00YzZkLTkwMzAtNWI4OWYzNGNjZmFiXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Trainer 3">
     <div class="trainer-info">
-      <h2>Trainer C</h2>
-      <p>A motivational powerhouse who turned heartbreak into strength.  
-      His programs focus on both physical transformation and inner resilience — training that builds character as well as muscle.</p>
+      <h2>Nadia ka shohar</h2>
+      <p>Recently he got shocked when he know that there is no nadia there is a guy who's trying to be nadia.
+      He got heartbreak so he is ready to transform himself and our gym members.</p>
     </div>
   </div>
 
@@ -233,8 +233,7 @@
     <img src="gymtrainer.jpeg" alt="Trainer 4">
     <div class="trainer-info">
       <h2>Subhan Khan</h2>
-      <p>High energy, full of confidence, and unstoppable on the floor — her sessions bring motivation, entertainment, and results together.  
-      The perfect balance of fun and fitness.</p>
+      <p>Bhai call utha liya kar aur uth Jaya kar warna aur belt treatment ke baad toh uth Jaya hi kar warna next time homepage ki full screen par aayega</p>
     </div>
   </div>
 
